<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/usersetting"
	android:background="@drawable/login_bg">
    <TextView 
        android:id="@+id/more_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height_other"
        android:paddingTop="10dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/travel_top_bg"
        android:gravity="center_horizontal"
        android:textColor="@color/theme1_red"
        android:textSize="20sp"
        android:text="@string/usersetting"/>
    <ScrollView
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_below="@id/more_title"
    	android:scrollbars="vertical" >
        <LinearLayout
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:paddingLeft="10dp"
	    	android:paddingRight="10dp"
	    	android:orientation="vertical">
	        
	        <TextView
	            android:id="@+id/a1"
	            style="@style/more_list" 
	            android:layout_marginTop="10dp"
	            android:onClick="change_theme"
				android:background="@drawable/ic_preference_first"
				android:text="@string/usersetting_item1"/>
	        <RelativeLayout
	            android:layout_width="match_parent"
	            android:layout_height="40dp"
	            android:background="@drawable/ic_preference_mid" >
	            <TextView 
	                android:id="@+id/a2"
				    android:layout_width="wrap_content"
				    android:layout_height="match_parent"
				    android:gravity="center"
				    android:textSize="15sp"
				    android:textColor="#000"
					android:text="@string/usersetting_item2"/>
	            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:button="@drawable/sharemanage_account_switch"
                    android:minWidth="76dp"
                    android:checked="true"/>
	        </RelativeLayout>
	        <TextView 
	            android:id="@+id/a3"
			    style="@style/more_list"
			    android:onClick="change_size"
				android:background="@drawable/ic_preference_last"
				android:text="@string/usersetting_item3"/>
	        <Button 
	            android:id="@+id/clearbutton"
	            android:layout_marginTop="10dp"
	           	android:layout_width="fill_parent"
				android:layout_height="@dimen/more_list_height"
				android:background="@drawable/logout_btn"
				android:textColor="#FFF"
				android:textSize="15sp"
				android:onClick="clear"
				android:text="@string/usersetting_item4" />
	    </LinearLayout>
    </ScrollView>

</RelativeLayout>