<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/more_feature"
	android:background="@drawable/login_bg">
    <TextView 
        android:id="@+id/more_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height_other"
        android:paddingTop="10dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/travel_top_bg"
        android:gravity="center_horizontal"
        android:textColor="@color/theme1_red"
        android:textSize="20sp"
        android:text="@string/feature"/>
    <LinearLayout
        android:layout_below="@id/more_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >
        <TextView
            	android:id="@+id/feature_weather_history"
                android:layout_width="match_parent"
    			android:layout_height="48dp"
            	android:background="@drawable/ic_preference_first"
            	android:gravity="center"
            	android:text="@string/feature_weather_history"
            	android:textColor="@color/theme1_red"
				android:textSize="20sp"            	
            	android:orientation="horizontal" >
        </TextView>
        <RelativeLayout
            	android:id="@+id/date_relative"
                android:layout_width="match_parent"
    			android:layout_height="48dp"
            	android:background="@drawable/ic_preference_mid" >
            	<TextView 
				    android:id="@+id/feature_label_date"
				    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textColor="@color/theme1_red"
                    android:textSize="18sp"
                    android:text="@string/feature_label_date"/>
                <EditText
                    android:id="@+id/feature_editText_date"
                    android:layout_toRightOf="@id/feature_label_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/login_edit"
                    android:ems="10"
                    android:inputType="date" />
                <ImageButton
                    android:id="@+id/datepicker"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:scaleType="fitCenter"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:background="@android:color/transparent"
                    android:src="@drawable/datepicker" 
                    android:contentDescription="@string/app_name"/>
                
        </RelativeLayout>
        <LinearLayout
          	 	android:id="@+id/city_linear"
                android:layout_width="match_parent"
    			android:layout_height="48dp"
            	android:background="@drawable/ic_preference_last"
            	android:gravity="center"
            	android:orientation="horizontal" >
                <TextView 
				    android:id="@+id/feature_label_city"
				    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/theme1_red"
                    android:textSize="18sp"
                    android:text="@string/feature_label_city"/>
                <EditText
                    android:id="@+id/feature_editText_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_edit"
                    android:ems="10"
                    android:inputType="text" />
        </LinearLayout>
        <Button
            android:id="@+id/feature_confirm"
            android:layout_width="@dimen/btn_width"
	        android:layout_height="@dimen/btn_height"
          	android:background="@drawable/btn_theme1"
          	android:layout_marginTop="10dp"
          	android:onClick="feature_do"
          	android:layout_gravity="center_horizontal"
          	android:textColor="@color/theme1_red"
          	android:textSize="20sp"
          	android:text="@string/feature_confirm" />
    </LinearLayout>
	<TextView
	    	android:id="@+id/feature_expect"
            android:layout_width="match_parent"
          	android:layout_height="48dp"
          	android:layout_margin="10dp"
          	android:layout_alignParentBottom="true"
          	android:background="@drawable/feature_expect_bg"
          	android:gravity="center"
          	android:textColor="#666"
          	android:text="@string/feature_expect" />
</RelativeLayout>