<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" 
    android:layout_height="match_parent" 
    android:background="@drawable/login_bg"
    tools:ignore="HardcodedText,SmallSp">  
  <!-- id为景区详情标题 scenic_details_title-->  
  <TextView 
      android:id="@+id/scenic_details_title" 
      android:layout_width="fill_parent" 
      android:layout_height="@dimen/title_height_other" 
      android:layout_alignParentTop="true" 
      android:background="@drawable/travel_top_bg" 
      android:gravity="center_horizontal" 
      android:paddingTop="10dp" 
      android:text="@string/scenic_title" 
      android:textColor="@color/theme1_red" 
      android:textSize="20sp"/>  
  <RelativeLayout 
      android:id="@+id/scenic_details_say" 
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content" 
      android:layout_alignParentLeft="true" 
      android:layout_marginTop="8dp"
      android:layout_below="@+id/scenic_details_title"> 
    <!-- id为景点名字 scenic_point_name-->  
    <TextView 
        android:id="@+id/scenic_point_name" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:gravity="center_horizontal" 
        android:textColor="@color/theme1_red" 
        android:textSize="25sp"/>  
    <TextView
		android:id="@+id/scenic_jieshao" 
        android:layout_width="fill_parent" 
        android:layout_below="@id/scenic_point_name" 
        android:layout_height="wrap_content" 
        android:paddingLeft="10dp" 
        android:text="@string/scenic_jieshao" 
        android:textSize="20sp"/> 
  </RelativeLayout>  
  <RelativeLayout 
      android:id="@+id/scenic_details_say_below" 
      android:layout_width="fill_parent" 
      android:layout_height="230dp" 
      android:layout_below="@id/scenic_details_say">   
    <!-- id为景点描述 scenic_point_describe-->  
    <TextView 
        android:id="@+id/scenic_point_describe" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_alignParentLeft="true" 
        android:layout_marginTop="10dp" 
        android:paddingLeft="10dp" ></TextView>
  </RelativeLayout>  
  <LinearLayout 
      android:id="@+id/scenic_jieshao2" 
      android:orientation="horizontal" 
      android:layout_width="match_parent" 
      android:layout_height="wrap_content" 
      android:layout_marginLeft="10dp"
      android:layout_below="@id/scenic_details_say_below"> 
    <TextView 
        android:id="@+id/dizhi"
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content" 
        android:text="地址：" 
        android:textColor="@color/theme1_yellow" 
        android:textSize="18sp"/>  
    <!-- id为景点地址 scenic_point_address-->  
    <TextView 
        android:id="@+id/scenic_point_address" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_weight="1" 
        android:textSize="18sp"/> 
  </LinearLayout>  

  <LinearLayout 
      android:layout_width="match_parent" 
      android:layout_height="match_parent" 
      android:orientation="horizontal" 
      
      > 
    <RadioGroup 
        android:id="@+id/place_main_tabs" 
        android:layout_width="0dip" 
        android:layout_weight="1.0"
        android:layout_height="@dimen/title_height" 
        android:orientation="horizontal"
        android:layout_gravity="bottom"> 
      <RadioButton 
          android:id="@+id/scenic_point_food_text" 
          style="@style/city_info_item" 
          android:layout_width="match_parent" 
          android:layout_height="match_parent" 
          android:drawableTop="@drawable/ic_food" 
          android:text="@string/scenic_point_food" 
          android:button="@null"/>  
      <RadioButton 
          android:id="@+id/scenic_point_hotel_text" 
          style="@style/city_info_item" 
          android:layout_width="match_parent" 
          android:layout_height="match_parent" 
          android:drawableTop="@drawable/ic_hotel" 
          android:text="@string/scenic_point_hotel" 
          android:button="@null"/>  
      <RadioButton 
          android:id="@+id/scenic_point_traffic_text" 
          style="@style/city_info_item" 
          android:layout_width="match_parent" 
          android:layout_height="match_parent"
          android:drawableTop="@drawable/ic_traffic" 
          android:text="@string/travel_roadcondition" 
          android:button="@null"/>

      <RadioButton
          android:id="@+id/scenic_point_shopping_text"
          style="@style/city_info_item"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:button="@null"
          android:drawableTop="@drawable/ic_shopping"
          android:text="@string/scenic_point_shopping" />
    </RadioGroup> 
  </LinearLayout> 
</RelativeLayout>
